--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,3 @@
 tasks:
-  - init: |
-      git clone https://github.com/vlang/v && cd v && make && cd ..
-      git clone https://github.com/EmmaTheMartian/clockwork
-  - command: |
-      cd v && ./v symlink && cd ..
-      cd clockwork && v install EmmaTheMartian.Maple && v run . install && cd ..
+  - name: "Init"
+    command: ./scripts/init.sh
