--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,9 @@
-[*]
-charset = utf-8
+[.*]
 end_of_line = lf
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = tab
+
+[*.{fnl,yml}]
+indent_style = space
+indent_size = 2
