--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - uses: leafo/gh-actions-lua@v11
+        with:
+          luaVersion: "5.4.7"
       - name: Install Dependencies
         run: |
           sudo apt install -y luarocks
