--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
 name: Build and deploy content to Pages
 
-image: nickblah/lua:5.4.7-luarocks-alpine
-
 on:
   push:
     branches: ["main"]
@@ -23,6 +21,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    container:
+      image: nickblah/lua:5.4.7-luarocks-alpine
     steps:
       - name: Checkout
         uses: actions/checkout@v4
