--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Dependencies
         run: |
+          apk add git
           apk add luarocks
           luarocks install --server=https://luarocks.org/dev seal
           luarocks install fennel
