Maybe just maybe fix build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,9 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Dependencies
         run: |
-          apk add git gcc luarocks
-          luarocks install --server=https://luarocks.org/dev seal
-          luarocks install fennel
+          apk add git gcc libc-dev lua-5.4-dev luarocks5.4 make
+          luarocks-5.4 install --server=https://luarocks.org/dev seal
+          luarocks-5.4 install fennel
       - name: Build
         run: sh build.sh
       - name: Upload artifact
