Fine then I'll use Debian

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     container:
-      image: nickblah/lua:5.4.7-luarocks-alpine3.21
+      image: nickblah/lua:5.4.7-luarocks-debian
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,7 +31,8 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Dependencies
         run: |
-          apk add git gcc libc-dev make
+          apt update
+          apt install -y gcc git make
           luarocks install --server=https://luarocks.org/dev seal
           luarocks install fennel
       - name: Build
