--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,7 @@
-[.*]
+root = true
+
+[*.{c,h,css}]
 end_of_line = lf
 indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.{fnl,yml}]
-indent_style = space
-indent_size = 2
